--- a/modulation/k8s/modulation-deployment.yml
+++ b/modulation/k8s/modulation-deployment.yml
@@ -1,25 +1,25 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: <component-name>
+  name: modulation
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: <component-name>
+      app: modulation
   template:
     metadata:
       labels:
-        app: <component-name>
+        app: modulation
     spec:
-      imagePullSecrets:         # This field is useful in case your image resides in a private registry
-        - name: <secret-name>   # you can remove this block if you are user Docker Hub
+      #imagePullSecrets:         # This field is useful in case your image resides in a private registry
+        #- name: <secret-name>   # you can remove this block if you are user Docker Hub
       containers:
-        - name: <component-name>
-          image: <image-name>:<tag>   # If you do not provide a <tag>, k8s will use `latest`
+        - name: modulation
+          image: jamilaws/modulation   # If you do not provide a <tag>, k8s will use `latest`
           imagePullPolicy: "Always"   # This means the container runtime will pull the image every time the pod is (re-)created. Another possible value is 'IfNotPresent'
           ports:
             - containerPort: 8000     # Exposes a port in a given container to receive traffic
           envFrom:
             - configMapRef:
-                name: <component-name>-configmap
+                name: modulation-configmap
