--- a/monitoring/k8s/monitoring-configmap.yml
+++ b/monitoring/k8s/monitoring-configmap.yml
@@ -5,4 +5,4 @@ metadata:
   labels:
     app: monitoring
 data:
-  SCH_SERVICE_NAME: http://sif-edge.sif:9000
+  SCH_SERVICE_NAME: http://sif-edge.digital-twin:9000
