--- a/actuation/k8s/actuation-configmap.yml
+++ b/actuation/k8s/actuation-configmap.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: <component-name>-configmap
+  name: actuation-configmap
   labels:
-    app: <component-name>
+    app: actuation
 data:
-  SCH_SERVICE_NAME: http://sif-edge.sif:9000
+  SCH_SERVICE_NAME: http://sif-edge.digital-twin:9000
