--- a/modulation/k8s/modulation-service.yml
+++ b/modulation/k8s/modulation-service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: <component-name>
+  name: modulation
 spec:
   type: ClusterIP
   ports:
-    - name: <component-name>
+    - name: modulation
       port: 8000          # Port k8s svc will listen for incoming traffic within the k8s cluster
       targetPort: 8000    # Port of pod to route incoming traffic
       protocol: TCP
   selector:
-    app: <component-name>
+    app: modulation
